# supa-fast-chart

./: .gitignore  README.md  build_for_vercel.sh
chart_engine/: Cargo.toml
chart_engine/src/: lib.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js
