[package]
name = "chart_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # 중요: C 호환 동적 라이브러리 (Wasm용)

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"                   # 디버깅용
js-sys = "0.3.83"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
